--- a/horario.html
+++ b/horario.html
@@ -87,7 +87,7 @@
                 <p>Oficina Parroquial: 2:00 - 5:00 pm</p>
             </div>
             <div class="horario2">
-                <img src="img/parroquia.jpg" alt="Imagen 3" width="345">
+                <img src="img/parroquia.JPG" alt="Imagen 3" width="345">
                 <h3>HORARIO MISAS</h3>
                 <p>Martes a Viernes: 07:00am </p> 
                 <p>Jueves:(Adoración Eucarística todo el día) | Hora santa: 17:00 hrs</p>
