--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
             <div class="imagen">
                 <img src="img/11.png" alt="Directions" width="100">
                 <h3>DIRECCION / TIEMPOS</h3>
-                <p>Ven y visítanos personalmente,¡Te esperamos!</p>
+                <p>Ven y visítanos ¡Te esperamos!</p>
             </div>
             <div class="imagen">
                 <img src="img/2.png" alt="Events" width="100">
-                <h3>ACTIVIDADES</h3>
+                <h3>EVENTOS</h3>
                 <p>Entérate de las diversas actividades que realizamos</p>
             </div>
             <div class="imagen">
@@ -149,7 +149,7 @@
             <div class="imagen">
                 <img src="img/4.png" alt="Watch" width="100">
                 <h3>NUESTRA CASA</h3>
-                <p>¡Ven y visítanos!</p>
+                <p>¡No te olvides de visitar a Jesús Sacramentado!</p>
                 <p>Esta también es tu casa</p>
                 <br><br><br>
             </div>
@@ -167,8 +167,7 @@
             </div>
             <!-- Div para la descripción -->
             <div id="descripcion-fondo">
-                <h2>Como Iglesia Católica guiada por el Espirítu Santo, buscamos apasionadamente, en nuestra parroquia, una relación de amor con Dios y con nuestros hermanos, especialmente los más necesitados;</h2>
-                <h2>Profundizando en ese Amor Divino expresado con el envío de Jesucristo, Hijo único del Padre, para salvación de todos.</h2>
+                <h2>Como Iglesia Católica guiada por el Espíritu Santo, buscamos apasionadamente, en nuestra parroquia una relación de amor con Dios y con nuestros hermanos especialmente los más necesitados; profundizando en ese Amor Divino expresado con el envío de Jesucristo, Hijo único del Padre, para salvación de todos.</h2>
             </div>
         </div>
     </div>
@@ -188,12 +187,13 @@
         <div class="imagen">
             <img src="img/c.png" alt="Request Prayer" width="100">
             <h3>SOLIDARIDAD</h3>
-            <p>No dudes en contribuir con la misión de la Parroquia y apoyarnos donando.</p>
+            <p>No dudes en apoyar en la misión de la Iglesia, donando y aportando a nuestra Parroquia.</p>
         </div>
         <div class="imagen">
             <img src="img/d.png" alt="Watch" width="100">
             <h3>APOSTOLADOS</h3>
             <p>Presta tu servicio al Señor en alguno de nuestros apostolados.</p>
+            <p>Acercate a los servidores de nuestra Parroquia para más información.</p>
             <br><br><br> <br><br><br>
         </div>
     </div>
@@ -220,20 +220,6 @@
     <script src="js/script.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
     
