--- a/horario.html
+++ b/horario.html
@@ -78,21 +78,24 @@
 <br><br><br>
     <div id="HORARIO">
         <br><br>
-        <h1>HECHA UN VISTAZO A LOS HORARIOS</h1>
+        <h1>ECHA UN VISTAZO A LOS HORARIOS</h1>
         <div id="horario2">
             <div class="horario2">
                 <img src="img/papa.jpg" alt="Imagen 1" width="350">
                 <h3>LUNES A VIERNES</h3>
-                <p>Oficina Parroquial: 9:00 - 1:00 pm</p>
-                <p>Oficina Parroquial: 2:00 - 5:00 pm</p>
+                <p>Oficina Parroquial</p>
+                <p> 9:00am - 1:00 pm</p>
+                <p> 2:00pm - 5:00 pm</p>
+                <p>Sabados: 9:00am - 1:00 pm</p>
             </div>
             <div class="horario2">
-                <img src="img/parroquia.JPG" alt="Imagen 3" width="345">
+                <img src="img/parroquia.jpg" alt="Imagen 3" width="345">
                 <h3>HORARIO MISAS</h3>
-                <p>Martes a Viernes: 07:00am </p> 
-                <p>Jueves:(Adoración Eucarística todo el día) | Hora santa: 17:00 hrs</p>
-                <P>Sábado: 18:00 horas</p>
-                <p>Domingo: 7:00 - 8:30 am | 10:30 - 12:00 pm | 6:00 pm</p>
+                <p><b>Martes a Viernes</b> 7:00am y 6:00pm</p> 
+                <p><b>Jueves</p></b>
+                <p>Exposición del Santísimo todo el día | Hora santa: 5:00pm</p>
+                <P><b>Sábado</b> 6:00pm </p>
+                <p><b>Domingo</b> 7:00am - 8:30 am | 10:30am - 12:00 pm | 6:00 pm</p>
             </div>
         </div>
     </div>
@@ -117,3 +120,4 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
