--- a/acerca.html
+++ b/acerca.html
@@ -117,14 +117,14 @@
             <div class="acerca2">
                 <img src="img/papa.jpg" alt="Imagen 3" width="340">
                 <h3>HISTORIA</h3>
-                <p>La Iglesia se encuentra en la ciudad de Guatemala y fue construida el 15 de agosto de 1935, pertenece a la Orden Diocesana.</p>
+                <p>La Parroquia de María Auxiliadora fue erigida por Decreto de 27 de Julio y en 1 de Agosto de inaguró por el Rv.Vicario general Mons.Mariano Rossell; el primer Párroco nombrado Pbro.Pedro Fernandez (cfr. libro de bautismos no.1)</p>
             </div>
 
             <!-- Columna 2 -->
             <div class="acerca2">
                 <img src="img/m4.jpg" alt="Imagen 4" width="330">
                 <h3>MISIÓN Y VALORES</h3>
-                <p>La administración de la Parroquia María Auxiliadora está alineada con la misión y los valores de la iglesia, así como trabajar para cumplir con ellos.</p>
+                <p>La administración de la Parroquia María Auxiliadora está alineada con la misión y los valores de la iglesia católica, así como trabajar para cumplir con ellos.</p>
             </div>
             <div class="acerca2">
                 <img src="img/m5.jpg" alt="Imagen 5" width="400" >
