--- a/horario.html
+++ b/horario.html
@@ -89,7 +89,7 @@
                 <p>Sabados: 9:00am - 1:00 pm</p>
             </div>
             <div class="horario2">
-                <img src="img/parroquia.jpg" alt="Imagen 3" width="345">
+                <img src="img/parroquia.JPG" alt="Imagen 3" width="345">
                 <h3>HORARIO MISAS</h3>
                 <p><b>Martes a Viernes</b> 7:00am y 6:00pm</p> 
                 <p><b>Jueves</p></b>
