--- a/eventos.html
+++ b/eventos.html
@@ -120,17 +120,17 @@
             <div class="acerca2">
                 <img src="img/e3.png" alt="Imagen 3" width="430" height="250">
                 <p>Pregunta por nuestro próximo Alpha para adolescentes, jóvenes, matrimonios o adultos.</p>
-                <p>¿Deseas unirte a nuestros apostolados? Monaguillos, lectores, catequistas, misioneros, adoradores y otros</p>
+                <p>¿Deseas unirte a nuestro apostolado? Monaguillos, lectores, catequistas, misioneros, adoradores y otros</p>
             </div>
 
             <!-- Columna 2 -->
             <div class="acerca2">
                 <img src="img/iveu.jpeg" alt="Imagen 4" width="330">
-                <p>Acércate al Santísimo Sacramento del Altar en la Capilla de Adoración Perpetua</p>
+                <p>Acércate al Santísimo Sacramento del Altar en la Capilla de Adoración Perpetua (abierto las 24hrs)</p>
             </div>
             <div class="acerca2">
                 <img src="img/popie.jpg" alt="Imagen 5" width="270" >
-                <p>Centro de Formación Parroquial y Semanas Bíblicas</p>
+                <p>Pregunta sobre nuestros programas de formación Parroquial</p>
             </div>
             <div class="acerca2">
                 <img src="img/ev5.png" alt="Imagen 6" width="250">
@@ -157,7 +157,8 @@
             </div>
             <div class="acerca2">
                 <img src="img/ola.jpg" alt="Imagen 3" width="400">
-                <p>Jóvenes: Adolescentes de 13 a 18 años (todos los viernes) Jóvenes Adultos de 19 a 30 años (todos los sábados)</p>
+                <p>Jóvenes Adolescentes de 13 a 18 años (todos los viernes) </p>
+             <p>Jóvenes Adultos de 19 a 30 años (todos los sábados)</p>
             </div>
 
             <!-- Columna 2 -->
