--- a/eventos.html
+++ b/eventos.html
@@ -148,7 +148,7 @@
         <div class="acerca-container">
             <!-- Columna 1 -->
             <div class="acerca2">
-                <img src="img/roro.jpg" alt="Imagen 1" width="380">
+                <img src="img/terminee.jpg" alt="Imagen 1" width="380">
                 <p>Comunidades Carismáticas</p>
             </div>
             <div class="acerca2">
@@ -163,7 +163,7 @@
 
             <!-- Columna 2 -->
             <div class="acerca2">
-                <img src="img/13.jpg" alt="Imagen 4" width="390">
+                <img src="img/casi.jpg" alt="Imagen 4" width="390">
                 <p>Catequesis de Primera Comunión, Confirmación, prebautismales y prematrimoniales</p>
             </div>
             <div class="acerca2">
