--- a/acerca.html
+++ b/acerca.html
@@ -117,7 +117,7 @@
             <div class="acerca2">
                 <img src="img/papa.jpg" alt="Imagen 3" width="340">
                 <h3>HISTORIA</h3>
-                <p>La Parroquia de María Auxiliadora fue erigida por Decreto de 27 de Julio y en 1 de Agosto de inaguró por el Rv.Vicario general Mons.Mariano Rossell; el primer Párroco nombrado Pbro.Pedro Fernandez (cfr. libro de bautismos no.1)</p>
+                <p>La Parroquia de María Auxiliadora fue erigida por Decreto de 27 de Julio de 1935 y en 1 de Agosto de inaguró por el Rv.Vicario general Mons.Mariano Rossell; el primer Párroco nombrado Pbro.Pedro Fernandez (cfr. libro de bautismos no.1)</p>
             </div>
 
             <!-- Columna 2 -->
