--- a/eventos.html
+++ b/eventos.html
@@ -118,7 +118,7 @@
                 <p>Misa de Enfermos: segundo sabado de cada mes</p>
             </div>
             <div class="acerca2">
-                <img src="img/e3.png" alt="Imagen 3" width="430" height="250">
+                <img src="img/terminee.jpg" alt="Imagen 3" width="430" height="250">
                 <p>Pregunta por nuestro próximo Alpha para adolescentes, jóvenes, matrimonios o adultos.</p>
                 <p>¿Deseas unirte a nuestro apostolado? Monaguillos, lectores, catequistas, misioneros, adoradores y otros</p>
             </div>
@@ -148,7 +148,7 @@
         <div class="acerca-container">
             <!-- Columna 1 -->
             <div class="acerca2">
-                <img src="img/terminee.jpg" alt="Imagen 1" width="380">
+                <img src="img/roro.jpg" alt="Imagen 1" width="380">
                 <p>Comunidades Carismáticas</p>
             </div>
             <div class="acerca2">
