--- a/eventos.html
+++ b/eventos.html
@@ -118,7 +118,7 @@
                 <p>Misa de Enfermos: segundo sabado de cada mes</p>
             </div>
             <div class="acerca2">
-                <img src="img/terminee.jpg" alt="Imagen 3" width="430" height="250">
+                <img src="img/e3.png" alt="Imagen 3" width="430" height="250">
                 <p>Pregunta por nuestro próximo Alpha para adolescentes, jóvenes, matrimonios o adultos.</p>
                 <p>¿Deseas unirte a nuestro apostolado? Monaguillos, lectores, catequistas, misioneros, adoradores y otros</p>
             </div>
@@ -129,7 +129,7 @@
                 <p>Acércate al Santísimo Sacramento del Altar en la Capilla de Adoración Perpetua (abierto las 24hrs)</p>
             </div>
             <div class="acerca2">
-                <img src="img/terminee.jpg" alt="Imagen 5" width="450" >
+                <img src="img/Imagen de WhatsApp 2023-09-17 a las 12.14.42.jpg" alt="Imagen 5" width="450" >
                 <p>Pregunta sobre nuestros programas de formación Parroquial</p>
             </div>
             <div class="acerca2">
@@ -156,7 +156,7 @@
                 <p>Núcleo de Parejas: Todos los jueves</p>
             </div>
             <div class="acerca2">
-                <img src="img/ola.jpg" alt="Imagen 3" width="400">
+                <img src="img/20230812_144612.jpg" alt="Imagen 3" width="400">
                 <p>Jóvenes Adolescentes de 13 a 18 años (todos los viernes) </p>
              <p>Jóvenes Adultos de 19 a 30 años (todos los sábados)</p>
             </div>
